--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -1101,7 +1101,7 @@ other classes overiding the dark mode declarations due to specificity*/
   background: #1e1e1e;
 }
 
-@media (max-width: 768px) and (min-width: 601px) {
+@media only screen and (max-width: 768px) and (min-width: 601px) {
   *,
   *::after,
   *::before {
@@ -1481,7 +1481,7 @@ other classes overiding the dark mode declarations due to specificity*/
   }
 }
 
-@media (min-width: 769px) and (max-width: 900px) {
+@media only screen and (min-width: 769px) and (max-width: 900px) {
   *,
   *::after,
   *::before {
@@ -1681,7 +1681,7 @@ other classes overiding the dark mode declarations due to specificity*/
   }
 }
 
-@media (max-width: 380px) {
+@media only screen and (max-width: 380px) {
   .hero {
     height: 120vh;
   }
@@ -1696,7 +1696,7 @@ other classes overiding the dark mode declarations due to specificity*/
   }
 }
 
-@media (min-width: 901px) and (max-width: 1024px) {
+@media only screen and (min-width: 901px) and (max-width: 1024px) {
   *,
   *::after,
   *::before {
@@ -1896,9 +1896,9 @@ other classes overiding the dark mode declarations due to specificity*/
   }
 }
 
-@media (max-width: 900px) and (orientation: landscape) {
+@media only screen and (max-width: 900px) and (orientation: landscape) {
   .hero {
-    height: 120vh;
+    height: 110vh;
   }
   .project-case {
     height: 330vh;
