--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -1361,6 +1361,9 @@ other classes overiding the dark mode declarations due to specificity*/
   #theme {
     left: 20%;
   }
+  .hero {
+    height: 90vh;
+  }
   h1 {
     width: 100%;
     padding: 1em;
