--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -1280,6 +1280,10 @@ other classes overiding the dark mode declarations due to specificity*/
     {
         left: 20%;
     }
+    .hero
+    {
+        height: 90vh;
+    }
     h1
     {
         width: 100%;
