--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -21,7 +21,7 @@ $glass: rgba(138, 138, 138, 0.123);
 ::selection
 {
     color: white;
-    background: rgb(255, 0, 0);
+    background: rgba(141,141,141, 0.6);
 }
 
 .faux-top
@@ -217,7 +217,7 @@ nav ul {
   display: flex;
   align-items: center;
   position: relative;
-  left: 10%;
+  left: 25%;
   width: 50%;
   overflow-x: hidden;
   overflow-y: hidden;
@@ -1898,7 +1898,7 @@ other classes overiding the dark mode declarations due to specificity*/
 {
     .hero
     {
-        height: 100vh;
+        height: 110vh;
     }
     .project-case
     {
