--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -650,6 +650,7 @@ h1
 .project-tile
 {
     width: 40%;
+    min-height: 300px;
     height: 350px;
     display: flex;
     flex-direction: column;
@@ -1369,6 +1370,7 @@ other classes overiding the dark mode declarations due to specificity*/
     }
     .project-tile
     {
+        min-height: 230px;
         height: 31%;
     }
     .project-link
@@ -1890,11 +1892,11 @@ other classes overiding the dark mode declarations due to specificity*/
     }
     .project-tile
     {
-        height: 47%;
+        height: 45%;
     }
 }
 
-@media only screen and (max-width: 900px ) and (orientation: landscape) 
+@media only screen and (max-width: 1023px ) and (orientation: landscape) 
 {
     .hero
     {
@@ -1902,7 +1904,7 @@ other classes overiding the dark mode declarations due to specificity*/
     }
     .project-case
     {
-        height: 330vh;
+        height: 315vh;
     }
 
     
