--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -75,11 +75,195 @@ html {
   scroll-behavior: smooth;
 }
 
+.no-scroll {
+  overflow-y: hidden;
+}
+
 body {
   font-family: 'sora','sans-serif';
   padding: 0;
   margin: 0;
   background-color: whitesmoke;
+  overflow-x: hidden;
+}
+
+#preloader {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #141414;
+  -webkit-animation-name: page-loading;
+          animation-name: page-loading;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+          animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  overflow-y: hidden;
+}
+
+#loading-text {
+  padding: 2em;
+  text-transform: uppercase;
+  color: white;
+}
+
+.ball {
+  background-color: white;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+}
+
+#cradle {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#start {
+  position: relative;
+  -webkit-animation: cradleStart 1s  forwards;
+          animation: cradleStart 1s  forwards;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-iteration-count: 5;
+          animation-iteration-count: 5;
+}
+
+#end {
+  position: relative;
+  -webkit-animation: cradleEnd 1s 0.5s forwards;
+          animation: cradleEnd 1s 0.5s forwards;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  -webkit-animation-iteration-count: 5;
+          animation-iteration-count: 5;
+}
+
+@-webkit-keyframes cradleStart {
+  0% {
+    bottom: 0px;
+    right: 0px;
+  }
+  25% {
+    bottom: 50px;
+    right: 50px;
+  }
+  50% {
+    bottom: 0px;
+    right: 0px;
+  }
+  100% {
+    bottom: 0px;
+    right: 0px;
+  }
+}
+
+@keyframes cradleStart {
+  0% {
+    bottom: 0px;
+    right: 0px;
+  }
+  25% {
+    bottom: 50px;
+    right: 50px;
+  }
+  50% {
+    bottom: 0px;
+    right: 0px;
+  }
+  100% {
+    bottom: 0px;
+    right: 0px;
+  }
+}
+
+@-webkit-keyframes cradleEnd {
+  0% {
+    bottom: 0px;
+    left: 0px;
+  }
+  25% {
+    bottom: 50px;
+    left: 50px;
+  }
+  50% {
+    bottom: 0px;
+    left: 0px;
+  }
+  100% {
+    bottom: 0px;
+    left: 0px;
+  }
+}
+
+@keyframes cradleEnd {
+  0% {
+    bottom: 0px;
+    left: 0px;
+  }
+  25% {
+    bottom: 50px;
+    left: 50px;
+  }
+  50% {
+    bottom: 0px;
+    left: 0px;
+  }
+  100% {
+    bottom: 0px;
+    left: 0px;
+  }
+}
+
+@-webkit-keyframes page-loading {
+  0% {
+    -webkit-transform: translateY(0vh);
+            transform: translateY(0vh);
+  }
+  100% {
+    -webkit-transform: translateY(-100vh);
+            transform: translateY(-100vh);
+  }
+}
+
+@keyframes page-loading {
+  0% {
+    -webkit-transform: translateY(0vh);
+            transform: translateY(0vh);
+  }
+  100% {
+    -webkit-transform: translateY(-100vh);
+            transform: translateY(-100vh);
+  }
 }
 
 .bg-text {
