--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -84,13 +84,150 @@ font-feature-settings: 'liga';
 html{
    scroll-behavior: smooth;
 }
+
+.no-scroll
+{
+    overflow-y: hidden;
+
+}
+
 body
 {
     font-family: 'sora','sans-serif';
     padding: 0;
     margin: 0;
     background-color: $base-light;
+    overflow-x: hidden;
 }
+
+#preloader
+{
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: $x-dark;
+    animation-name: page-loading;
+    animation-delay: 3s;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+    animation-iteration-count: 1;
+    overflow-y: hidden;
+}
+#loading-text
+{
+    padding: 2em;
+    text-transform: uppercase;
+    color: white;
+
+}
+.ball
+{
+    background-color: rgb(255, 255, 255);
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+}
+#cradle
+{
+    position: relative;
+    display: flex;
+    align-items: center;
+    flex-direction: row;    
+}
+
+#start
+{
+    position: relative;
+    animation: cradleStart 1s  forwards;
+    animation-timing-function: linear;
+    animation-iteration-count: 5;
+}
+
+#end
+{
+    position: relative;
+    animation: cradleEnd 1s 0.5s forwards;
+    animation-timing-function: linear;
+    animation-iteration-count: 5;
+}
+
+
+@keyframes cradleStart
+{
+    0%
+    {
+        bottom: 0px;
+        right: 0px;
+    }
+
+    25%
+    { 
+        bottom: 50px;
+        right: 50px;
+    }
+
+    50%
+    {
+
+        bottom:0px;
+        right:0px;
+    }
+
+    100%
+    {
+        bottom: 0px;
+        right: 0px;
+    }
+
+}
+
+@keyframes cradleEnd
+{
+    0%
+    {
+        bottom: 0px;
+        left: 0px;
+    }
+
+    25%
+    { 
+        bottom: 50px;
+        left: 50px;
+    }
+
+    50%
+    {
+
+        bottom: 0px;
+        left: 0px;
+    }
+
+    100%
+    {
+        bottom: 0px;
+        left: 0px;
+    }
+
+}
+@keyframes page-loading
+{   
+    0%
+    {
+        transform: translateY(0vh);
+    }
+
+    100%
+    {
+        transform: translateY(-100vh);
+    }
+}
+
 .bg-text 
 {
     display: block;
