--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -90,7 +90,7 @@ body {
 #preloader {
   height: 100vh;
   width: 100%;
-  position: fixed;
+  position: absolute;
   z-index: 100;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -925,8 +925,6 @@ h1 {
 
 .project-tile {
   width: 40%;
-  min-height: 300px;
-  height: 350px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1009,6 +1007,7 @@ video::-webkit-media-controls {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-top: 1em;
   width: 50%;
 }
 
@@ -1441,9 +1440,6 @@ other classes overiding the dark mode declarations due to specificity*/
   .project-desc, .project-tile {
     width: 100%;
   }
-  .project-tile {
-    height: 52.5%;
-  }
   .project-link {
     padding: 0.5em;
     font-size: 0.6em;
@@ -1628,10 +1624,6 @@ other classes overiding the dark mode declarations due to specificity*/
   }
   .project-desc, .project-tile {
     width: 100%;
-  }
-  .project-tile {
-    min-height: 230px;
-    height: 31%;
   }
   .project-link {
     padding: 0.5em;
@@ -1818,9 +1810,6 @@ other classes overiding the dark mode declarations due to specificity*/
   .project-desc, .project-tile {
     width: 100%;
   }
-  .project-tile {
-    height: 52.5%;
-  }
   .project-link {
     padding: 0.5em;
     font-size: 0.6em;
@@ -1855,9 +1844,6 @@ other classes overiding the dark mode declarations due to specificity*/
   }
   .about {
     height: 140vh;
-  }
-  .project-tile {
-    height: 41%;
   }
   .proj-link-container {
     width: 70%;
@@ -2033,9 +2019,6 @@ other classes overiding the dark mode declarations due to specificity*/
   .project-desc, .project-tile {
     width: 100%;
   }
-  .project-tile {
-    height: 52.5%;
-  }
   .project-link {
     padding: 0.5em;
     font-size: 0.6em;
@@ -2076,9 +2059,6 @@ other classes overiding the dark mode declarations due to specificity*/
   }
   .proj-number {
     top: 10%;
-  }
-  .project-tile {
-    height: 45%;
   }
 }
 
