--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -114,8 +114,8 @@ body {
           animation-duration: 3s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
-  -webkit-animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
-          animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+  -webkit-animation-timing-function: cubic-bezier(0.68, -0.55, 0.27, 10.55);
+          animation-timing-function: cubic-bezier(0.68, -0.55, 0.27, 10.55);
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
   overflow-y: hidden;
@@ -246,23 +246,23 @@ body {
 
 @-webkit-keyframes page-loading {
   0% {
-    -webkit-transform: translateY(0vh);
-            transform: translateY(0vh);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
   100% {
-    -webkit-transform: translateY(-150vh);
-            transform: translateY(-150vh);
+    -webkit-transform: translateX(-100vw);
+            transform: translateX(-100vw);
   }
 }
 
 @keyframes page-loading {
   0% {
-    -webkit-transform: translateY(0vh);
-            transform: translateY(0vh);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
   100% {
-    -webkit-transform: translateY(-150vh);
-            transform: translateY(-150vh);
+    -webkit-transform: translateX(-100vw);
+            transform: translateX(-100vw);
   }
 }
 
@@ -1057,7 +1057,6 @@ video::-webkit-media-controls {
           align-items: center;
   width: 100%;
   height: 100vh;
-  min-height: 400px;
   padding-bottom: 2em;
   background-image: url(images/whitecard2.jpg);
 }
