--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -115,7 +115,7 @@ body
     animation-delay: 2s;
     animation-duration: 3s;
     animation-fill-mode: forwards;
-    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+    animation-timing-function: cubic-bezier(.68,-0.55,.27,10.55);
     animation-iteration-count: 1;
     overflow-y: hidden;
 }
@@ -219,12 +219,12 @@ body
 {   
     0%
     {
-        transform: translateY(0vh);
+        transform: translateY(0);
     }
 
     100%
     {
-        transform: translateY(-150vh);
+        transform: translateX(-100vw);
     }
 }
 
@@ -909,7 +909,6 @@ video::-webkit-media-controls
     align-items: center;
     width: 100%;
     height: 100vh;
-    min-height: 400px;
     padding-bottom: 2em;
     background-image: url(images/whitecard2.jpg);
 }
