--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -219,12 +219,12 @@ body
 {   
     0%
     {
-        transform: translateY(0);
+        transform: translateX(0);
     }
 
     100%
     {
-        transform: translateX(-100vw);
+        transform: translateX(-120vw);
     }
 }
 
