--- a/Portfolio Website/styles.scss
+++ b/Portfolio Website/styles.scss
@@ -273,20 +273,23 @@ nav
     width: 100%;
     padding: 1em;
     background-color: $glass;
-    
     z-index: 10;
 }
+
+
 
 nav:before {
     content:"";
     position:absolute;
     z-index:-1;
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     top:0;
     left:0;
     right:0;
     bottom:0;
-  }
+}
+
 
 #logo
 {
@@ -985,20 +988,20 @@ footer
   right: 5%;
   bottom: 10%;
   text-decoration: none;
-  background: $base-light;
+  background: $glass;
+  backdrop-filter: blur(3px);
   overflow-y: hidden;
   overflow-x: hidden;
   border-radius: 50%;
   z-index: 4;
   height: 45px;
   width: 45px;
-  color: $darker;
+  color: $x-dark;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px 0px;
 }
 
 .back-to-top-dark
 {
-  background: $base-dark !important ;
   color: $base-light !important;
 }
 
@@ -2022,4 +2025,21 @@ other classes overiding the dark mode declarations due to specificity*/
     }
 
     
+}
+
+
+@supports not (backdrop-filter: blur(10px))
+{
+    nav
+    {
+        background-color: rgba(100, 100, 100, 0.7);
+    }
+
+    @media only screen and (max-width: 1023px)
+    {
+       nav ul
+       {
+        background-color: rgba(100, 100, 100, 0.7);
+       } 
+    }
 }
