--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -105,7 +105,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: #141414;
+  background: whitesmoke;
   -webkit-animation-name: page-loading;
           animation-name: page-loading;
   -webkit-animation-delay: 2s;
@@ -124,11 +124,11 @@ body {
 #loading-text {
   padding: 2em;
   text-transform: uppercase;
-  color: white;
+  color: #3c3c3c;
 }
 
 .ball {
-  background-color: white;
+  background-color: #141414;
   height: 25px;
   width: 25px;
   border-radius: 50%;
