--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -105,7 +105,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: whitesmoke;
+  background: rgba(138, 138, 138, 0.123);
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
   -webkit-animation-name: page-loading;
           animation-name: page-loading;
   -webkit-animation-delay: 2s;
@@ -2071,7 +2073,7 @@ other classes overiding the dark mode declarations due to specificity*/
   }
 }
 
-@supports not ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
+@supports not ((-webkit-backdrop-filter: blur()) or (backdrop-filter: blur())) {
   nav {
     background-color: rgba(100, 100, 100, 0.7);
   }
