--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -123,7 +123,7 @@ body {
   overflow-y: hidden;
 }
 
-#loading-text {
+.loading-text {
   padding: 2em;
   text-transform: uppercase;
   color: #3c3c3c;
@@ -1287,6 +1287,14 @@ other classes overiding the dark mode declarations due to specificity*/
   background: #1e1e1e;
 }
 
+.loading-text-dark {
+  color: whitesmoke;
+}
+
+.ball-dark {
+  background-color: white;
+}
+
 @media only screen and (max-width: 768px) and (min-width: 601px) {
   *,
   *::after,
@@ -1645,6 +1653,7 @@ other classes overiding the dark mode declarations due to specificity*/
   }
   #contact-card {
     width: 90%;
+    height: 60%;
     margin: 1em;
   }
   #contact-text {
@@ -2073,9 +2082,15 @@ other classes overiding the dark mode declarations due to specificity*/
   }
 }
 
-@supports not ((-webkit-backdrop-filter: blur()) or (backdrop-filter: blur())) {
+@supports not ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
+  #preloader {
+    display: none;
+  }
   nav {
-    background-color: rgba(100, 100, 100, 0.7);
+    background-color: whitesmoke;
+  }
+  .nav-dark {
+    background-color: #141414;
   }
   @media only screen and (max-width: 1023px) {
     nav ul {
