--- a/Portfolio Website/styles.css
+++ b/Portfolio Website/styles.css
@@ -52,7 +52,7 @@ p {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
-  font-size: 30px;
+  font-size: 20px;
   display: inline-block;
   line-height: 1;
   text-transform: none;
@@ -110,14 +110,14 @@ body {
           backdrop-filter: blur(30px);
   -webkit-animation-name: page-loading;
           animation-name: page-loading;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
   -webkit-animation-duration: 3s;
           animation-duration: 3s;
   -webkit-animation-fill-mode: forwards;
           animation-fill-mode: forwards;
-  -webkit-animation-timing-function: cubic-bezier(0.68, -0.55, 0.27, 10.55);
-          animation-timing-function: cubic-bezier(0.68, -0.55, 0.27, 10.55);
+  -webkit-animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
+          animation-timing-function: cubic-bezier(0.165, 0.84, 0.44, 1);
   -webkit-animation-iteration-count: 1;
           animation-iteration-count: 1;
   overflow-y: hidden;
@@ -156,8 +156,8 @@ body {
           animation: cradleStart 1s  forwards;
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
-  -webkit-animation-iteration-count: 5;
-          animation-iteration-count: 5;
+  -webkit-animation-iteration-count: 10;
+          animation-iteration-count: 10;
 }
 
 #end {
@@ -166,8 +166,8 @@ body {
           animation: cradleEnd 1s 0.5s forwards;
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
-  -webkit-animation-iteration-count: 5;
-          animation-iteration-count: 5;
+  -webkit-animation-iteration-count: 10;
+          animation-iteration-count: 10;
 }
 
 @-webkit-keyframes cradleStart {
@@ -248,23 +248,23 @@ body {
 
 @-webkit-keyframes page-loading {
   0% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
   100% {
-    -webkit-transform: translateX(-120vw);
-            transform: translateX(-120vw);
+    -webkit-transform: translateY(-100vh);
+            transform: translateY(-100vh);
   }
 }
 
 @keyframes page-loading {
   0% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
   100% {
-    -webkit-transform: translateX(-120vw);
-            transform: translateX(-120vw);
+    -webkit-transform: translateY(-100vh);
+            transform: translateY(-100vh);
   }
 }
 
@@ -272,11 +272,16 @@ body {
   display: block;
   position: absolute;
   color: whitesmoke;
-  font-size: 120px;
+  font-size: 60px;
   top: 0;
   right: 0;
   opacity: 0;
   z-index: 0;
+}
+
+#nsb {
+  font-size: 20px;
+  padding: 0.5em;
 }
 
 .skill-tile:hover .bg-text {
@@ -297,7 +302,7 @@ body {
 
 .fa-code {
   position: relative;
-  font-size: 50px;
+  font-size: 40px;
 }
 
 /*Styling for Navigation Bar*/
@@ -712,10 +717,14 @@ input:checked + .slider:before {
 
 h1 {
   font-size: 40px;
-  font-weight: 500;
+  font-weight: 200;
   width: 100%;
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
+}
+
+.boldtext {
+  font-weight: 600;
 }
 
 h3 {
@@ -820,10 +829,10 @@ h3 {
   position: relative;
   background-color: #cccccc;
   -ms-grid-row: 1;
-  -ms-grid-row-span: 4;
+  -ms-grid-row-span: 3;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
-  grid-area: 1 / 1 / 5 / 3;
+  grid-area: 1 / 1 / 4 / 3;
 }
 
 .skill2 {
@@ -865,6 +874,16 @@ h3 {
   -ms-grid-column: 3;
   -ms-grid-column-span: 2;
   grid-area: 4 / 3 / 5 / 5;
+}
+
+.skill6 {
+  position: relative;
+  background-color: #e2e2e2;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: 4 / 1 / 5 / 3;
 }
 
 .skill-type {
@@ -1092,7 +1111,7 @@ video::-webkit-media-controls {
   width: 100%;
   height: 100vh;
   padding-bottom: 2em;
-  background-image: url(images/whitecard2.jpg);
+  background: #bebebe;
 }
 
 #contact-card {
@@ -1287,6 +1306,10 @@ other classes overiding the dark mode declarations due to specificity*/
   background-color: #525252;
 }
 
+.skill6-dark {
+  background-color: #333333;
+}
+
 .project-box-dark {
   color: white;
   background: #1e1e1e;
@@ -1334,7 +1357,7 @@ other classes overiding the dark mode declarations due to specificity*/
     overflow-x: unset;
   }
   .bg-text {
-    font-size: 60px;
+    font-size: 40px;
   }
   p {
     font-size: 0.8em;
@@ -1352,7 +1375,7 @@ other classes overiding the dark mode declarations due to specificity*/
     font-size: 1.5em;
   }
   .fa-sass, .fa-css3 {
-    font-size: 30px;
+    font-size: 20px;
   }
   .fg-text {
     font-size: 36px;
@@ -1522,8 +1545,12 @@ other classes overiding the dark mode declarations due to specificity*/
   *::before {
     overflow-x: unset;
   }
+  .hero {
+    -webkit-transition: none;
+    transition: none;
+  }
   .bg-text {
-    font-size: 60px;
+    font-size: 40px;
   }
   p {
     font-size: 0.8em;
@@ -1541,7 +1568,7 @@ other classes overiding the dark mode declarations due to specificity*/
     font-size: 1.5em;
   }
   .fa-sass, .fa-css3 {
-    font-size: 30px;
+    font-size: 20px;
   }
   .fg-text {
     font-size: 36px;
@@ -1647,8 +1674,6 @@ other classes overiding the dark mode declarations due to specificity*/
   }
   .skill-tile {
     overflow-x: hidden;
-    -webkit-transition: 0.8s ease;
-    transition: 0.8s ease;
   }
   .project-case {
     -webkit-box-orient: vertical;
@@ -1711,7 +1736,7 @@ other classes overiding the dark mode declarations due to specificity*/
     overflow-x: unset;
   }
   .bg-text {
-    font-size: 60px;
+    font-size: 40px;
   }
   p {
     font-size: 0.8em;
@@ -1729,7 +1754,7 @@ other classes overiding the dark mode declarations due to specificity*/
     font-size: 1.5em;
   }
   .fa-sass, .fa-css3 {
-    font-size: 30px;
+    font-size: 20px;
   }
   .fg-text {
     font-size: 36px;
@@ -1920,7 +1945,7 @@ other classes overiding the dark mode declarations due to specificity*/
     overflow-x: unset;
   }
   .bg-text {
-    font-size: 60px;
+    font-size: 40px;
   }
   p {
     font-size: 0.8em;
@@ -1938,7 +1963,7 @@ other classes overiding the dark mode declarations due to specificity*/
     font-size: 1.5em;
   }
   .fa-sass, .fa-css3 {
-    font-size: 30px;
+    font-size: 20px;
   }
   .fg-text {
     font-size: 36px;
